--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
     "storage" : "PLAYER_STORAGE.json",
-    "token" : "secret token"
+    "auth": "auth.json",
+    "sounds": "sounds.json",
+    "token" : "MTExNDI0NTkzOTU1Nzg0Mjk1NQ.GLtts9.dzWLfYZMr6MPN_nheyIO-m__7s3apQZHMwFP8g"
 }
